[package]
name = "blobstream_contracts_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = "0.4.5"
alloy-sol-macro = "0.6.3"
alloy-sol-types = "0.6.3"
alloy-primitives = "0.6.3"
sha3 = "0.10.8"
k256 = { version = "0.13.3", default-features = false, features = ["ecdsa"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[lib]
# cdylib builds a a %.wasm file with `cargo build --release --target wasm32-unknown-unknown`
crate-type = ["cdylib"]
name = "blobstream_contracts_rust"

[workspace]
