[package]
name = "blobstream_contracts_rust"
version = "0.1.0"
edition = "2021"
author = "manojkgorle"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = "0.4.5"
alloy-sol-macro = "0.6.3"
alloy-sol-types = "0.6.3"
alloy-primitives = "0.6.3"
secp256k1 = { version = "0.28.2", default-features = false, features = [
    "alloc",
    "recovery",
] }
sha2 = { version = "0.10", default-features = false }
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[lib]
# cdylib builds a a %.wasm file with `cargo build --release --target wasm32-unknown-unknown`
crate-type = ["cdylib", "lib"]
name = "blobstream_contracts_rust"

[workspace]
