[package]
name = "input-types-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blobstream_contracts_rust = { path = "../blobstream-contracts-rust" }
wee_alloc = "0.4.5"
alloy-primitives = "0.6.3"
seq_wasm_sdk = { path = "../sdk" }
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[lib]
# cdylib builds a a %.wasm file with `cargo build --release --target wasm32-unknown-unknown`
crate-type = ["cdylib", "lib"]
name = "input_types_test"
