[package]
name = "seq_wasm_sdk"
version = "0.0.1"
edition = "2021"
author = "manojkgorle"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = "0.4.5"
alloy-sol-macro = "0.7.7"
alloy-sol-types = "0.7.7"
alloy-primitives = "0.7.7"
