[package]
name = "vector_contracts_rust"
version = "0.1.0"
edition = "2021"
author = "manojkgorle"

[dependencies]
wee_alloc = "0.4.5"
seq_wasm_sdk = { path = "../sdk" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[lib]
# cdylib builds a a %.wasm file with `cargo build --release --target wasm32-unknown-unknown`
crate-type = ["cdylib", "lib"]
name = "vector_contracts_rust"
